<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright 2015 TweetMap
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~     http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent" >
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="vertical" >
            <ImageView
                android:layout_gravity="center_horizontal"
                android:layout_width="128dp"
                android:layout_height="128dp"
                android:src="@drawable/ic_launcher" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:paddingTop="22dp"
                android:text="@string/app_info_name"
                android:textColor="#808080"
                android:textSize="14dp" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/app_name"
                android:textSize="20dp" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:paddingTop="22dp"
                android:text="@string/app_info_provider"
                android:textColor="#808080"
                android:textSize="14dp" />
            <ImageView
                android:layout_gravity="center_horizontal"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:src="@drawable/ic_launcher" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/app_provider"
                android:textSize="20dp" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/app_info_url"
                android:autoLink="web"
                android:textSize="20dp" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:paddingTop="22dp"
                android:text="@string/app_info_version"
                android:textColor="#808080"
                android:textSize="14dp" />
            <TextView
                android:id="@+id/versionText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:textSize="20dp" />
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:orientation="vertical"
                android:splitMotionEvents="false" >
                <Button
                    android:id="@+id/openSourceLicenseButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="15dp"
                    android:gravity="center"
                    android:text="@string/app_info_button_oss"
                    android:textSize="18dp"
                    android:textColor="@color/white"
                    android:background="@drawable/button"
                    style="@style/AppTheme.Button"
                    android:onClick="onClickOpenSourceLicense" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>
